     The --branchmap option is gone in favor of using branch rename.
     The behavior and interface of the tag command has been simplified.
     The syntax of the expunge command has been simplified.
     The "paths [sub|sup]" command have been replaced by "path rename".
     The =Q set now provides a way to inspect recently modified events.
     The "edit" and "reverences edit" commands gave been retired.

4.23: 2021-01-13::
     Branch rename can take a regexp and do substitutions on the new name(s).
     The branchify and branchmap commands have been replaced by read options.
     Help directed to a tty goes though $PAGER when long enough to need it.
     Minor bugs related to the "done" end marker have been fixed.

4.22: 2020-12-28::
     Properly handle yet another bizarre Subversion tag-rename case.
     Massage any Subversion branch name to be legal as a git reference.
     Much of "Repository Editing" is now generated from embedded help.
     repotool mirror can now use rsync for pulling repositories.
     Repair repocutter reduce logic and add a test for it.
     New "branchlift" primitive for use after a --nobranch read.
     In SVN lifts, user .gitignores can be merged with svn:ignore properties.
     In SVN lifts, reduce overloading of the "-root" suffix.
     Add --obscure option to reposurgeon strip command, like repocutter.
     --preserve prevents automatic deletion of cv2svn branch creation tags.
     The repocutter see command dumps property settings
     Many improvements to the documentation, including improved cross-references.

4.21: 2020-11-18::
     Fix for a bug that could scramble history in pathological tag-copy cases.

4.20: 2020-11-16::
     Fixed a bug when an SVN file's content looked exactly like a link special.
     Prevented a crash when "stamp" was given with no selection.
     Various small improvements to documentation.

4.19: 2020-08-30::
     Fix for a bug that produced incorrect splits of mixed Subversion commits.
