@@ -1,4 +1,4 @@
 ## Test the branch delete command
 read <deleteall.fi
-branch heads/samplebranch delete
+branch delete heads/samplebranch
 write -
