@@ -1,5 +1,5 @@
 ## Test the rename branch command
 read <deleteall.fi
-branch heads/samplebranch rename heads/jabberwocky
-branch /heads.(.*)branch2/ rename heads/fuddle\1
+branch rename heads/samplebranch heads/jabberwocky
+branch rename /heads.(.*)branch2/ heads/fuddle\1
 write -
