@@ -1,7 +1,7 @@
 ## Test subversion tags nested below the root
 read <nesting.svn \
      --branchify=cpp-msbuild/trunk:cpp-msbuild/branches/*:cpp-msbuild/tags/*
-branch heads/cpp-msbuild/trunk rename heads/master
-branch @cpp-msbuild/tags/(.*)@ rename \1
+branch rename heads/cpp-msbuild/trunk heads/master
+branch rename @cpp-msbuild/tags/(.*)@ \1
 prefer git
 write -
