@@ -1,4 +1,4 @@
 ## Test path rename capability with selection set
 read <sample1.fi
-:19..$ path /README/ rename REAMDE
+:19..$ path rename /README/ REAMDE
 write -
