@@ -1,6 +1,6 @@
 ## Test path rename capability
 set relax
 read <sample1.fi
-path /README/ rename REAMDE	# Should succeed
-path /.gitignore/ rename REAMDE	# Should fail
+path rename /README/ REAMDE	# Should succeed
+path rename /.gitignore/ REAMDE	# Should fail
 write -
