@@ -1,5 +1,5 @@
 ## test rename of a reset
 read <testrepo.fi
-reset master rename mistress
+reset rename master mistress
 write -
 
