@@ -1,4 +1,4 @@
 ## test creating new resets
 read <min.fi
-@max(=C) reset foobar create
+@max(=C) reset create foobar
 write -
