@@ -1,6 +1,6 @@
 ## Tag create test
 read <sample1.fi
 set echo
-tag newtag create :15
+tag create newtag :15
 write -
 
