@@ -1,4 +1,4 @@
-tag annotated move :15
+tag move annotated :15
 <annotated> inspect
 Event 34 ================================================================
 tag annotated
