@@ -1,6 +1,6 @@
 ## Tag move test
 read <sample1.fi
 set echo
-tag annotated move :15
+tag move annotated :15
 <annotated> inspect
 write -
