@@ -2,7 +2,7 @@
 # This was Florian Eßer's tag create case that core dumped.
 # There should be a CR on the header delimiter line. 
 read <min.fi
-tag cutover-git create @max(=C)
+tag create cutover-git @max(=C)
 msgin <<EOF
 Tag-Name: cutover-git
 Tagger: J. Random Hacker <jrh@random.org> America/Los_Angeles
